# CoBra

./: .gitignore  README.md
adapter/USB Keyboard/: README.md
adapter/USB Keyboard/kicad/CObra_USB_KB/: CObra_USB_KB.kicad_pcb  CObra_USB_KB.kicad_pro  fp-lib-table  sym-lib-table
adapter/USB Keyboard/src/: CMakeLists.txt  pico_extras_import_optional.cmake
adapter/USB Keyboard/src/cobra_kb/: cdc_app.c  cobra_kb.c  cobra_kb.h  hid_app.c  main.c
adapter/USB Keyboard/src/usb/: CMakeLists.txt
adapter/USB Keyboard/src/usb/cobra_kb/cobra_host_cdc_msc_hid/: CMakeLists.txt  cobra_kb.c  cobra_kb.h  hid_app.c  main.c
adapter/USB-Keyboard/: README.md
adapter/USB-Keyboard/kicad/CObra_USB_KB/: CObra_USB_KB.kicad_prl  CObra_USB_KB.kicad_sch  fp-info-cache
adapter/USB-Keyboard/src/: CMakeLists.txt  cdc_app.c  cobra_kb.c  cobra_kb.h  hid_app.c  main.c
adapter/USB-Keyboard/uf2/: cobra_host_cdc_msc_hid_01.uf2  cobra_host_cdc_msc_hid_240624.uf2  cobra_host_cdc_msc_hid_240625.uf2
adapter/s-video/: Readme.md
adapter/s-video/kicad/: Cobra_original.net  Cobra_original.sch-bak  Connector.kicad_sym  Connector_edited.lib  cobra.lib  main.kicad_pcb  main.kicad_sch  main.sch-bak  ~main.kicad_sch.lck
adapter/s-video/kicad/140638518-659-5749181-1/: 5749181-1.stp
adapter/s-video/kicad/3D/: C_Axial_L2.8mm_D3.1mm_P5.08mm_Horizontal.step  svideo_board_pinheader.20231119-000150.FCBak  svideo_board_pinheader.FCStd  svideo_board_pinheader.step
adapter/s-video/kicad/Cobra_original.pretty/: C_THT_508_254.kicad_mod  C_THT_762_254.kicad_mod  MountingHole_3mm_Small_Pad.kicad_mod  TO-92-Cobra.kicad_mod  cobra_blue.kicad_mod
case/: README.md
case/STL/: Cobra-Case-Bottom.stl  Cobra-Case-Top.stl
mainboard/2layer/kicad/: .gitignore  Interface.kicad_sch  Interface.sch  Memory_arbiter_cmd.kicad_sch  Memory_arbiter_cmd.sch  Mux_video_address.kicad_sch  Mux_video_address.sch-bak  RAM_48.kicad_sch  RAM_48.sch-bak  ROM.kicad_sch  ROM.sch  Video_address_gen.kicad_sch  Video_address_gen.sch-bak  Video_memory.kicad_sch  Video_memory.sch-bak  Z80_CPU.kicad_sch  Z80_CPU.sch-bak  _autosave-monitor.kicad_sch  cobra.kicad_sym  config_selection.kicad_sch  config_selection.sch  fp-info-cache  main-rescue.lib  main.csv  main.kicad_prl  main.kicad_pro  main.kicad_sch  main.pro  main.xml  monitor.kicad_sch  monitor.sch-bak  sym-lib-table  video_generator.kicad_sch  video_generator.sch-bak  voltage-level-adapters.kicad_sch  voltage-level-adapters.sch
mainboard/2layer/kicad/3D/: DIN-5.FCStd  DIN-5.STEP  Dual_Reset.step  User Library-DIN-5.STEP
mainboard/2layer/kicad/Cobra_original.pretty/: CP_Axial_L25.0mm_D9.0mm_P30.00mm_Horizontal.kicad_mod  C_THT_508_254.kicad_mod  C_THT_762_254.kicad_mod  Crystal_HC18-U_Vertical.kicad_mod  DIN-5.kicad_mod  DIN41612_R_3x32_Male_Horizontal_THT.kicad_mod  DIP-14_W7.62mm.kicad_mod  DIP-16_W7.62mm.kicad_mod  DIP-24_W15.24mm.kicad_mod  D_DO-35_SOD27_P7.62mm_Horizontal.kicad_mod  MountingHole_2.5mm_Pad.kicad_mod  MountingHole_3mm_Pad.kicad_mod  PinHeader_1x01_P2.54mm_Vertical.kicad_mod  PinHeader_1x10_P2.54mm_Vertical.kicad_mod  PinHeader_1x15_P2.54mm_Vertical.kicad_mod  Reset_Switch.kicad_mod  (+3 more)
mainboard/2layer/pdf/: readme
s-video/kicad/: Cobra_original-cache.lib  Cobra_original.kicad_pcb-bak  Connector_edited.dcm  cobra.bak  cobra.kicad_sym  main-cache.lib  main-rescue.kicad_sym  main.kicad_prl  main.kicad_pro  main.sch  sym-lib-table
s-video/kicad/140638518-659-5749181-1/: 5749181-1.txt
s-video/kicad/Cobra_original.pretty/: C_Rect_L9.0mm_W2.5mm_P7.50mm_MKT.kicad_mod  MountingHole_3mm_Pad.kicad_mod  R508.kicad_mod  S-Video.kicad_mod  TO-92-CobraRev.kicad_mod  cobra_3.0_back_copper.kicad_mod  cobra_3.0_front_copper.kicad_mod
(+20 files in other folders)
